# grove

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  mkdocs.yml
.github/: FUNDING.yml  SECURITY.md  SPONSORS.md
core/: fragment.py
core/evidence/metrics/: robustness_auc.py  robustness_mae.py
core/evidence/validators/: robustness.py  threshold_crossing.py
core/extractor/: extractor.py  population.py
docs/: architecture.md  architecture_overview.mmd  architecture_overview_v02.mmd
docs/assets/: architecture.mmd  architecture_overview.mmd
docs/theory/: formalism.md  formalism_v02.md
engine/engine-core/: Cargo.toml
engine/engine-core/src/: config.rs  correspondence.rs  ecs.rs  error.rs  graph_lineage.rs  hf_ingest.rs  insight_accelerator.rs  lib.rs  main.rs  research.rs  scientific_agent.rs  telemetry.rs  tests.rs  token_filter.rs  types.rs  visualization.rs
engine/engine-core/src/compute/: mod.rs  sieve.rs  wave.rs
engine/engine-core/src/graph_ir/: execution.rs  graph.rs
engine/engine-core/src/pipeline/: m1_state.rs  m2_storage.rs  m3_recording.rs  m5_replay.rs  m6_metrics.rs  m7_optimizer.rs  mod.rs
engine/engine-kernel/: Cargo.toml
engine/engine-kernel/src/: concurrency.rs  fibers.rs  lib.rs
engine/engine-ml/: Cargo.toml
engine/engine-ml/src/: dynamic_router.rs  inference.rs  lib.rs  prefix_control.rs  scheduler.rs  scientific_reasoner.rs
engine/engine-server/: Cargo.toml
engine/engine-server/src/: hf_ingest.rs  main.rs  research_bus.rs  viz_exporter.rs
engine/engine-wasm/: Cargo.toml
engine/engine-wasm/src/: lib.rs
experiments/2025-11-rothko-wasm/: index.html  main.js
experiments/2025-11-wavefield-sieve/: index.html  main.js  styles.css  wavefield.frag  wavefield.vert
experiments/pipelines/robustness_eval/: README.md  build.ps1
experiments/pipelines/robustness_eval/capsule/: pipeline.yaml
experiments/pipelines/robustness_eval/notebooks/: robustness_analysis.ipynb
experiments/pipelines/robustness_eval/src/: run.py
optiserver/: Dockerfile  optimization_core.py  requirements.txt  server.py  ui_dashboard.py
scripts/: hf_ledger_sync.py  m4_visualizer.py  pipeline.py
