[package]
name = "ai_kernel_mvp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.4", features = ["v4"] }
petgraph = "0.6"
chrono = { version = "0.4", features = ["serde"] }
