[package]
name = "engine-core"
version = "2.6.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs2 = "0.4"
sha2 = "0.10"
hex = "0.4"        
rusqlite = "0.31"  
reqwest = "0.12"   

[profile.release]
opt-level = 3          # Maximize compilation aggressively
lto = true             # Enable Link-Time Optimization across modules
codegen-units = 1      # Reduce code-generation units to optimize binary generation
panic = "abort"        # Drop panic unwinding tables to shave memory footprints
strip = true           # Automatically strip symbols and debug binaries