[package]
name = "engine-ml"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dashmap = "6.1"
engine-core = { path = "../engine-core" }
engine-kernel = { path = "../engine-kernel" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiktoken-rs = "0.6"
tokio = { version = "1", features = ["rt", "macros"] }
# `ort` optional - commented so CI won't break unless user installs native runtime.
# ort = "2"
