[package]
name = "engine-server"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
engine-core = { path = "../engine-core" }
engine-ml = { path = "../engine-ml" }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
parquet = "54"
petgraph = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
uuid = { version = "1.4", features = ["v4"] }
